# rust-learn

./: Cargo.toml  LICENSE  README.md
04_httpie/: Cargo.toml
04_httpie/src/: main.rs
05_thumbor/: Cargo.toml  abi.proto  build.rs
05_thumbor/src/: main.rs
05_thumbor/src/engine/: photon.rs
05_thumbor/src/pb/: abi.rs  mod.rs
06_queryer/: Cargo.toml
06_queryer/queryer/: Cargo.toml
06_queryer/queryer-js/: Cargo.toml  README.md
06_queryer/queryer-js/src/: lib.rs
06_queryer/queryer-py/: .gitignore  README.md
06_queryer/queryer/examples/: covid.rs  covid19.rs  dialect.rs
06_queryer/queryer/src/: convert.rs  lib.rs
07_ownership/: Cargo.toml
07_ownership/src/: check_copy.rs  main.rs
08_borrow/: .gitignore  Cargo.toml
08_borrow/src/: heap_reference_stack.rs  heap_reference_stack_outlive.rs  local_ref.rs  multiple_mut_ref.rs  multiple_mut_ref1.rs  multiple_mut_ref2.rs  multiple_mut_ref_string.rs  ownership_reference.rs  reborrow.rs
09_multi_owner/: Cargo.toml
09_multi_owner/src/: dag.rs  dag_arc.rs  dag_mut.rs  rc.rs
10_lifetime/: Cargo.toml
10_lifetime/src/: lifetime1.rs  lifetime4.rs  lifetime_mono.rs  lifetime_non_lexical.rs  strtok.rs
11_memory/: Cargo.toml
11_memory/examples/: drop.rs  raii.rs  student.rs
11_memory/misc/: test.c
11_memory/src/: align.rs  lazy_static.rs  lifetime.rs  size.rs
12_type_system/: Cargo.toml
12_type_system/src/: collect.rs  constant.rs  id.rs  ip.rs  reader.rs  writer.rs  writer_fail.rs
13_traits/: Cargo.toml
13_traits/src/: animal.rs  complex.rs  dd.rs  formatter.rs  iterator.rs  parse.rs  parse1.rs  parse1_type.rs  parse2.rs  trait_object.rs  trait_object_internal.rs  write.rs
14_sys_traits/: .gitignore  Cargo.toml
14_sys_traits/src/: convert.rs  copy_drop.rs  default.rs  deref.rs  dev.rs  linked_list.rs  send_sync.rs  sized.rs
15_smart_pointers/: Cargo.toml
15_smart_pointers/src/: allocator.rs  borrow.rs  box.rs  cow1.rs  cow2.rs  guard.rs  guard1.rs  mystring.rs
16_data_structure/: Cargo.toml
16_data_structure/src/: boxed.rs  iter.rs  iter_ext.rs  slice1.rs  slice2.rs  slice3.rs  slice4.rs  slice5.rs
17_hash_table/: Cargo.toml
17_hash_table/src/: btreemap1.rs  btreemap2.rs  hash.rs  hashmap1.rs  hashmap2.rs
18_error_handling/: Cargo.toml
18_error_handling/src/: panic.rs
19_closure/examples/: callable.rs  closure_size.rs  closure_size1.rs  fn_mut1.rs  fn_once2.rs  fn_return.rs  mimic_closure.rs
19_closure/misc/: closure.go
21_kv/: Cargo.toml
21_kv/examples/: client.rs  dummy_server.rs  server.rs
21_kv/src/: error.rs  lib.rs
21_kv/src/pb/: abi.rs  mod.rs
21_kv/src/service/: command_service.rs  mod.rs
21_kv/src/storage/: memory.rs
22_rgrep/: Cargo.toml
22_rgrep/src/: error.rs  lib.rs  main.rs
src/: main.rs
