[package]
name = "lifetime"
version = "0.1.0"
edition = "2021"

# 如果尝试编译 lifetime 会因为生命周期出错
# [[bin]]
# name = "lifetime"
# path = "src/lifetime.rs"

[[bin]]
name = "lifetime1"
path = "src/lifetime1.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
