[package]
name = "memory"
version = "0.1.0"
edition = "2021"

[[example]]
name = "drop"

[[bin]]
name = "alignment"
path = "src/alignment.rs"

[[bin]]
name = "size"
path = "src/size.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
