[package]
name = "memory"
version = "0.1.0"
edition = "2021"

[[example]]
name = "drop"

[[example]]
name = "student"

[[example]]
name = "raii"

[[bin]]
name = "alignment"
path = "src/alignment.rs"

[[bin]]
name = "size"
path = "src/size.rs"

[[bin]]
name = "align"
path = "src/align.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
