[package]
name = "memory"
version = "0.1.0"
edition = "2021"

[[example]]
name = "drop"

[[example]]
name = "student"

[[example]]
name = "raii"

[[bin]]
name = "alignment"
path = "src/alignment.rs"

[[bin]]
name = "size"
path = "src/size.rs"

[[bin]]
name = "align"
path = "src/align.rs"

[[bin]]
name = "lazy_static"
path = "src/lazy_static.rs"

[[bin]]
name = "lifetime"
path = "src/lifetime.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1" # 通过宏更方便地初始化静态变量
