[package]
name = "type_system"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "collect"
path = "src/collect.rs"

[[bin]]
name = "ip"
path = "src/ip.rs"

[[bin]]
name = "constant"
path = "src/constant.rs"

[[bin]]
name = "id"
path = "src/id.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
