[package]
name = "smart_pointers"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "allocator"
path = "src/allocator.rs"

[[bin]]
name = "box"
path = "src/box.rs"

[[bin]]
name = "borrow"
path = "src/borrow.rs"

[[bin]]
name = "cow1"
path = "src/cow1.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2"