[package]
name = "hash_table"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hashmap1"
path = "src/hashmap1.rs"

[[bin]]
name = "hashmap2"
path = "src/hashmap2.rs"

[[bin]]
name = "hash"
path = "src/hash.rs"

[[bin]]
name = "btreemap1"
path = "src/btreemap1.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
