[package]
name = "rgrep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1" # 错误处理库
clap = { version = "3", features = ["derive"] } #解析命令行参数
colored = "2" # 终端中给文本添加颜色
glob = "0.3" # 文件路径匹配
itertools = "0.10" # 迭代器
rayon = "1" # 并行迭代器
regex = "1" # 正则表达式
thiserror = "1" # 简化自定义错误类型定义